# reapack

./: .appveyor.yml  .gitignore  .gitmodules  .reapack-index.conf  .travis.yml  ABOUT.md  CMakeLists.txt  Makefile  README.md  Rakefile  Tupfile  Tupfile.osx  Tupfile.win32  build_deps.bat  index.xml  linux.tup  macosx.tup  prepare.rb  vcpkg.json  win32.tup  wrapper.bat
.github/: FUNDING.yml
Extensions/: ReaPack.ext
cmake/: FindMiniZip.cmake  FindSWELL.cmake  FindTinyXML.cmake  FindWDL.cmake  brew-llvm.cmake
cmake/vcpkg-triplets/: arch-env.cmake  arm64ec-windows-static.cmake
src/: CMakeLists.txt  about.cpp  about.hpp  about.mm  action.cpp  action.hpp  api.cpp  api.hpp  api_helper.hpp  api_misc.cpp  api_package.cpp  api_repo.cpp  archive.cpp  archive.hpp  archive_tasks.cpp  archive_tasks.hpp  browser.cpp  browser.hpp  browser_entry.cpp  browser_entry.hpp  buildinfo.hpp.in  buildinfo.rc  buildlangpack.cpp  cleanup.cpp  cleanup.hpp  config.cpp  config.hpp  control.cpp  control.hpp  database.cpp  database.hpp  database_v1.cpp  dialog.cpp  dialog.hpp  dialog.mm  dllimport.hpp  download.cpp  download.hpp  encoding.cpp  encoding.hpp  (+98 more)
src/util/: reverse_range.hpp
test/: CMakeLists.txt  action.cpp  api.cpp  database.cpp  database_v1.cpp  encoding.cpp  event.cpp  filesystem.cpp  filter.cpp  hash.cpp  helper.cpp  helper.hpp  index.cpp  index_v1.cpp  main.cpp  metadata.cpp  ostream.cpp  package.cpp  path.cpp  platform.cpp  receipt.cpp  registry.cpp  remote.cpp  serializer.cpp  source.cpp  sqlite.cpp  string.cpp  tempfile.cpp  time.cpp  version.cpp  win32.cpp  xml.cpp
test/db/v1/: anonymous_package.xml  changelog.xml  empty_category.xml  full_database.xml  invalid_type.xml  missing_platform.xml  missing_source_file.xml  missing_source_url.xml  missing_version.xml  unnamed_category.xml  unnamed_package.xml  wrong_version_tag.xml
test/helper/: io.cpp  io.hpp
test/indexes/: invalid_version.xml
test/indexes/ReaPack/: broken.xml  future_version.xml  Новая папка.xml
test/indexes/v1/: anonymous_package.xml  valid_index.xml
test/indexes/v1/ReaPack/: author.xml  developer_name.xml  metadata.xml  missing_platform.xml  missing_source_url.xml  pkg_desc.xml  pkg_metadata.xml  valid_index.xml  wrong_category_tag.xml  wrong_package_tag.xml  wrong_version_tag.xml
test/indexes/v1/ReaPack/cache/: explicit_sections.xml  metadata.xml  missing_platform.xml  missing_type.xml  missing_version.xml  src_platform.xml  src_type.xml  time.xml  unsupported_type.xml  valid_index.xml
test/remote/: invalid_name.ReaPackRemote  test.ReaPackRemote
x64/: tup.config
x86/: tup.config
